crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply__test__fuzzy_search_replace-2.snap
---
source: crates/forge_app/src/tools/patch/apply.rs
expression: content1
snapshot_kind: text
---
function calculateTotal(items) {
  let total = 0;
  for (const item of items) {
    total += item.price * item.quantity;
  }
  return total;
}
