crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply__test__fuzzy_search_replace-4.snap
---
source: crates/forge_app/src/tools/patch/apply.rs
expression: content2
snapshot_kind: text
---
function computeTotal(items, tax = 0) {
  let total = 0.0;
  for (const item of items) {
    total += item.price * item.quantity;
  }
  return total;
}
