crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply__test__invalid_rust_replace-2.snap
---
source: crates/forge_app/src/tools/patch/apply.rs
expression: content
snapshot_kind: text
---
fn main() { let x =
