crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply__test__multiple_blocks-2.snap
---
source: crates/forge_app/src/tools/patch/apply.rs
expression: final_content
snapshot_kind: text
---
    New First    
  Middle Line  
    New Last
