crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply__test__valid_rust_replace.snap
---
source: crates/forge_app/src/tools/patch/apply.rs
expression: "TempDir::normalize(&result)"
snapshot_kind: text
---
<file_content path="[TEMP_DIR]/test.rs">
fn main() { let x = 42; let y = x * 2; }
</file_content>
